fix: buttons in project section now aligned at bottom of boxes

--- a/src/css/home.css
+++ b/src/css/home.css
@@ -186,10 +186,18 @@ section {
     border-radius: 5px;
     box-shadow: 0 6px 25px rgba(0,0,0,0.2);
     width: 22vw;
-    padding: 5px 20px 5px 20px;
+    padding: 5px 20px 50px 20px;
     margin-left: 5px;
     margin-right: 5px;
     margin-bottom: 10px;
+    position: relative;
+}
+.projectbox__button-container {
+    text-align: center;
+    position: absolute;
+    bottom: 10px;
+    left: 0;
+    width: 100%;
 }
 .projectbox > p {
     font-size: 1.4rem;
